# rdup

./: .gitignore  .travis.yml  0.6.0-rc1  AUTHORS  BACKUPS  BUGS  BUGS_FIXED  COMPILE  ChangeLog  DEPENDENCIES  DESIGN  FF  GNUmakefile  GNUmakefile.in  Makefile.in  README  README.SCRIPTS  RELEASE-NOTES-1.1  SCRIPTS  TODO  abspath.c  aes.c  archive.c  backup.sh  backup.sh.1  backup.sh.in  base64.c  base64.h  bu  bu.sh  check_gnu_make.m4  child.c  chown.c  common.c  common.h  config.h.in  configure  configure.ac  crawler.c  crypt.c  (+84 more)
contrib/: README  convert.pl  prune.rb
debian/: README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  dirs  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rdup-default.ex  rdup-doc.docs  rdup.doc-base.EX  rules  watch.ex
doc/: crypt.pl.1.in  crypt.sh.1.in  dump-here.sh.8.in  dump.sh.8.in  grep.pl.1.in  grep.sh.1.in  gzip.pl.1.in  gzip.sh.1.in  header.rst  header.rst.in  hist.sh.1.in  mirror.pl.8.in  mirror.sh.8.in  monthday.sh.8.in  purge.sh.8.in  rcat.sh.1.in  rcat.sh.8.in  rdup-backups.1  rdup-backups.1.in  rdup-backups.1.rst  rdup-backups.7  rdup-backups.8.in  rdup-cp.1.in  rdup-cp.1.rst  rdup-cp.8.in  rdup-crypt.1.in  rdup-dump-here.1.in  rdup-dump-here.8.in  rdup-dump.1.in  rdup-dump.8.in  rdup-gpg.1.in  rdup-grep.1.in  rdup-gzip.1.in  rdup-hist.1.in  rdup-introduction  rdup-mirror.1.in  rdup-mirror.8.in  rdup-purge.1.rst  rdup-report.tex  rdup-restore.1.in  (+24 more)
doc/tex/: atroff.cls  blocksbook.cls  rdup-quickstart.tex  rdup.tex
examples/: rdup.cron
feedback/: ben.25apr  bramk.08may  bramk.10may
hdup/: README  hdup.conf  hdup.pl  hdup2.sh
mirror/: README  backup.sh.8  backup.sh.8.in  backup.sh.in  dump.sh  hist.sh.1  hist.sh.1.in  mirror.sh.in  yesterday.sh.1  yesterday.sh.1.in  yesterday.sh.in
patches/: rdup.patch  second_rdup.patch
php/: action.php  backup.php  config.php  i18n.php  index.php  lang.php  lang.txt  lib.php  list-dir.php  menu.css  menu.js  progressbar.js  rc.php  rdup-index.php  rdup.rc  rdup.sh  rdupd.php  system.php  test.php  web.php
php/css/: bugzilla.css  global.css  menu.css  navigation.css  rdup.css
pl-restore/: mirror.pl.in
pl-tools/: crypt.pl.in  grep.pl.in  gzip.pl.in  hardlink.pl.in  mirror.pl  mirror.pl.in  rdup-check.in  rdup-cp.in  rdup-crypt.in  rdup-gpg.in  rdup-grep.in  rdup-gzip.in  rdup-hist.in  rdup-mirror.in  rdup-purge.in  rdup-s3.in  rdup-snap.in
po/: GNUmakefile.in  LINGUAS  de.po  nl.po  rdup.pot
poster/: poster-outline  rdup-poster  rdup-sane
poster/tex/: rdup.tex
rb-tools/: diff.rb  diffmirror.rb  echo.rb  mirror.rb  mirror2.rb
remote/: README  catch.sh.1.in  catch.sh.in  sbackup.sh.in  sftp.sh.in  throw.sh.1.in  throw.sh.in
restore/: monthday.sh  restore.sh  rorrim.sh
rpm/: rdup.spec  rdup.spec.in
scripts/: README  autorun  dnotify.sh  dump.sh  purge.sh  rdcrypt.sh  usb-dump.sh
scripts/hdup/: README  hdup2.sh
sh/: rdup-ln  rdup-ln.sh  rdup-simple  rdup-simple.in  rdup-simple.sh  rdup-simple.sh.in
sh-restore/: monthday.sh  monthday.sh.in  monthday2.sh  restore.sh.in  rorrim.sh  rorrim.sh.in
sh-shared/: shared.sh
sh-tools/: README  crypt.sh  crypt.sh.in  dump-here.sh.in  dump.sh  dump.sh.in  grep.sh  grep.sh.in  gzip.sh  gzip.sh.in  hist.sh  hist.sh.in  mirror.sh  mirror.sh.in  purge.sh  purge.sh.in  yesterday.sh  yesterday.sh.in
sh-wrapper/: dump-hardlink.sh.in  dump-here.sh.in  dump.sh.in  rdup-dump-here.in  rdup-dump.in  rdup-restore.in  rdup-simple.in  rdup-snap-here.in  rdup-snap-link.in  rdup-snapshot.in  restore.sh.in  snapshot.sh.in
shared/: shared.pl.in  shared.sh.in
test/: 000_make_rdup.tpkg  001_run.tpkg  002_rdup_output.tpkg  003_min-r-empty.tpkg  004_gzip.tpkg  005_crypt.tpkg  006_mirror.tpkg  007_restore_run.tpkg  008_restore.tpkg  009_latex.tpkg  010_restore.tpkg  011_run_perl.tpkg  012_snap.tpkg  013_gzip2.tpkg  014_snap_link.tpkg  015_snap_link_hour.tpkg  016_full_incr.tpkg  017_new_dir.tpkg  018_dir_move.tpkg  019_rdup_simple_f.tpkg  020_rdup_up_links.tpkg  021-rdup_pipe_line.tpkg  cat-to-rdup-up-should work  codingstyle.tpkg  do  new-test  post-commit  remote.test  t  t1  test-dir-move  test-full-inc  test-new-dir
test/00-compile/: begin  description
test/01-run/: begin  description
test/02-rdup-output/: begin  description
test/03-min-r-empty/: begin  description
test/04-codingstyle/: begin  description
test/05-full-incr/: begin  description
test/06-new-dir/: begin  description
test/07-dir-move/: begin  description
test/08-rdup-simple/: begin  description
test/09-rdup-up-links/: begin  description
test/10-rdup-pipe/: begin  description
test/manual/: 004_remote.tpkg
testsuite/: todo
testsuite/rdup/: rdup.a-flag.exp  rdup.a-flag.helper  rdup.chmod.exp  rdup.chmod.helper  rdup.dir.exp  rdup.dir.helper  rdup.full.exp  rdup.full.helper  rdup.fuzzing1.data  rdup.fuzzing1.exp  rdup.fuzzing1.helper  rdup.fuzzing2.exp  rdup.fuzzing2.helper  rdup.hardlink-strip.exp  rdup.hardlink-strip.helper  rdup.hardlink-strip2.exp  rdup.hardlink-strip2.helper  rdup.hardlink.exp  rdup.hardlink.helper  rdup.incr-readonly-dir.exp  rdup.incr-readonly-dir.helper  rdup.incr-rm-file.exp  rdup.incr-rm-file.helper  rdup.incr-rm-link.exp  rdup.incr-rm-link.helper  rdup.incr.exp  rdup.incr.helper  rdup.ln-up.exp  rdup.ln-up.helper  rdup.ln.exp  rdup.m-flag.exp  rdup.match.exp  rdup.match.helper  rdup.match_exp  rdup.mvdir.exp  rdup.mvdir.helper  rdup.newdir.exp  rdup.newdir.helper  rdup.nobackup-symlink.exp  rdup.nobackup-symlink.helper  (+41 more)
tex/: rdup-quickstart.tex  rdup.tex
tools/: README  crypt.sh  dump.sh  grep.sh  gzip.sh  hist.sh  hist.sh.in  purge.sh  restore.sh  yesterday.sh  yesterday.sh.in
user/: gzip.pl  mirror.pl
